# video-audio-combiner

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md
.github/workflows/: release.yml
backend/: pyproject.toml
backend/src/video_audio_combiner/: __init__.py  main.py
backend/src/video_audio_combiner/api/: __init__.py  routes.py  schemas.py
backend/src/video_audio_combiner/services/: __init__.py  alignment.py  ffmpeg_service.py  waveform.py
backend/src/video_audio_combiner/utils/: __init__.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/scripts/: notarize.js
frontend/src/main/: index.ts  python-backend.ts
frontend/src/preload/: index.d.ts  index.ts
frontend/src/renderer/: index.html
frontend/src/renderer/src/: App.module.css  App.tsx  env.d.ts
frontend/src/renderer/src/components/: AlignmentControls.module.css  AlignmentControls.tsx  AlignmentEditor.module.css  AlignmentEditor.tsx  ExportModal.module.css  ExportModal.tsx  FileSelector.module.css  FileSelector.tsx  PlayheadCursor.module.css  PlayheadCursor.tsx  PreviewPanel.module.css  PreviewPanel.tsx  PreviewRangeSelector.module.css  PreviewRangeSelector.tsx  SegmentOverlay.module.css  SegmentOverlay.tsx  SetupWizard.module.css  SetupWizard.tsx  SourcePanel.module.css  SourcePanel.tsx  TimelineCursor.module.css  TimelineCursor.tsx  TrackPicker.module.css  TrackPicker.tsx  VideoFramePreview.module.css  VideoFramePreview.tsx  VideoPreview.module.css  VideoPreview.tsx  WaveformSpinner.module.css  WaveformSpinner.tsx  WaveformTrack.module.css  (+3 more)
scripts/: bump-version.js
(+13 files in other folders)
